      is needed on Cisco WLC 21xx series (thanks to Ralf Ertzinger)
    * FIX: fix inventory of f5_bigip_temp
    * mk_oracle (lnx+win): Fixed TEMP tablespace size calculations
    * ps: output node process is running on (only for clusters)
    * hr_mem: handle rare case where more than one entry is present
      (this prevents an exception of pfSense)

    Multisite:
    * Added several missing localization stringsw
    * IE: Fixed problem with clicking SELECT fields in the new wato foldertree snapin
    * Fixed problem when trying to visit dashboards from new wato foldertree snapin
    * Chrome: Fixed styling problem of foldertree snapin
    * Views: Only show the commands and row selection options for views where
      commands are possible
    * The login mask honors the default_language definition now
    * check_bi_local.py: works now with cookie based authentication
    * FIX: Fixed wrong redirection after login in some cases
    * FIX: Fixed missing stats grouping in alert statistics view
    * FIX: Fixed preview table styling in view editor
    * FIX: Multisite authed users without permission to multisite are
      automatically logged out after showing the error message
    * Retry livestatus connect until timeout is used up. This avoids
      error messages when the core is being restarted


    BI:
    * New column (painter) for simplistic box display of tree.
      This is used in a view for a single hostgroup.

1.1.13i3:
    Core, Setup, etc.:
    * *_contactgroups lists: Single group rules are all appended. When a list
      is found as a value this first list is used exclusively. All other
      matching rules are ignored
    * cmk -d does now honor --cache and --no-tcp
    * cmk -O/-R now uses omd re{start,load} core if using OMD
    * FIX: setup.sh now setups up permissions for conf.d/wato
      correctly
    * cmk --localize update supports an optional ALIAS which is used as
      display string in the multisite GUI